packages/dax-sql-parser/dax_sql_parser-0.1.0-py3-none-any.whl/dax_sql_parser/grammar/DaxParser.py
# Generated from Dax.g4 by ANTLR 4.13.2
import sys

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class DaxParser(Parser):
    grammarFileName = "Dax.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'EVALUATE'",
        "'ORDER'",
        "'BY'",
        "'ASC'",
        "'DESC'",
        "'TRUE'",
        "'FALSE'",
        "'BLANK'",
        "'VAR'",
        "'RETURN'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'&&'",
        "'||'",
        "'!'",
        "<INVALID>",
        "'<>'",
        "'<'",
        "'<='",
        "'>'",
        "'>='",
        "'IN'",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'&'",
        "'('",
        "')'",
        "'{'",
        "'}'",
        "','",
    ]

    symbolicNames = [
        "<INVALID>",
        "EVALUATE",
        "ORDER",
        "BY",
        "ASC",
        "DESC",
        "TRUE",
        "FALSE",
        "BLANK",
        "VAR",
        "RETURN",
        "AND_KW",
        "OR_KW",
        "NOT_KW",
        "AND_OP",
        "OR_OP",
        "NOT_OP",
        "EQ",
        "NEQ",
        "LT",
        "LTE",
        "GT",
        "GTE",
        "IN",
        "PLUS",
        "MINUS",
        "ASTERISK",
        "SLASH",
        "AMPERSAND",
        "OPEN_PAREN",
        "CLOSE_PAREN",
        "OPEN_CURLY",
        "CLOSE_CURLY",
        "COMMA",
        "STRING_LITERAL",
        "SINGLE_QUOTE_ID",
        "BRACKET_ID",
        "NUMBER",
        "IDENTIFIER",
        "WS",
        "KEYWORD",
    ]

    RULE_query = 0
    RULE_orderClause = 1
    RULE_orderExpression = 2
    RULE_expression = 3
    RULE_varExpression = 4
    RULE_logicalOr = 5
    RULE_logicalAnd = 6
    RULE_equality = 7
    RULE_relational = 8
    RULE_additive = 9
    RULE_multiplicative = 10
    RULE_unary = 11
    RULE_primaryExpression = 12
    RULE_tableExpression = 13
    RULE_functionCall = 14
    RULE_functionName = 15
    RULE_argumentList = 16
    RULE_columnReference = 17
    RULE_tableReference = 18
    RULE_literal = 19
    RULE_constructor = 20
    RULE_constructorRow = 21

    ruleNames = [
        "query",
        "orderClause",
        "orderExpression",
        "expression",
        "varExpression",
        "logicalOr",
        "logicalAnd",
        "equality",
        "relational",
        "additive",
        "multiplicative",
        "unary",
        "primaryExpression",
        "tableExpression",
        "functionCall",
        "functionName",
        "argumentList",
        "columnReference",
        "tableReference",
        "literal",
        "constructor",
        "constructorRow",
    ]

    EOF = Token.EOF
    EVALUATE = 1
    ORDER = 2
    BY = 3
    ASC = 4
    DESC = 5
    TRUE = 6
    FALSE = 7
    BLANK = 8
    VAR = 9
    RETURN = 10
    AND_KW = 11
    OR_KW = 12
    NOT_KW = 13
    AND_OP = 14
    OR_OP = 15
    NOT_OP = 16
    EQ = 17
    NEQ = 18
    LT = 19
    LTE = 20
    GT = 21
    GTE = 22
    IN = 23
    PLUS = 24
    MINUS = 25
    ASTERISK = 26
    SLASH = 27
    AMPERSAND = 28
    OPEN_PAREN = 29
    CLOSE_PAREN = 30
    OPEN_CURLY = 31
    CLOSE_CURLY = 32
    COMMA = 33
    STRING_LITERAL = 34
    SINGLE_QUOTE_ID = 35
    BRACKET_ID = 36
    NUMBER = 37
    IDENTIFIER = 38
    WS = 39
    KEYWORD = 40

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class QueryContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EVALUATE(self):
            return self.getToken(DaxParser.EVALUATE, 0)

        def tableExpression(self):
            return self.getTypedRuleContext(DaxParser.TableExpressionContext, 0)

        def EOF(self):
            return self.getToken(DaxParser.EOF, 0)

        def orderClause(self):
            return self.getTypedRuleContext(DaxParser.OrderClauseContext, 0)

        def getRuleIndex(self):
            return DaxParser.RULE_query

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuery"):
                listener.enterQuery(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuery"):
                listener.exitQuery(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitQuery"):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)

    def query(self):
        localctx = DaxParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(DaxParser.EVALUATE)
            self.state = 45
            self.tableExpression()
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 2:
                self.state = 46
                self.orderClause()

            self.state = 49
            self.match(DaxParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrderClauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDER(self):
            return self.getToken(DaxParser.ORDER, 0)

        def BY(self):
            return self.getToken(DaxParser.BY, 0)

        def orderExpression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DaxParser.OrderExpressionContext)
            else:
                return self.getTypedRuleContext(DaxParser.OrderExpressionContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.COMMA)
            else:
                return self.getToken(DaxParser.COMMA, i)

        def getRuleIndex(self):
            return DaxParser.RULE_orderClause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOrderClause"):
                listener.enterOrderClause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOrderClause"):
                listener.exitOrderClause(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrderClause"):
                return visitor.visitOrderClause(self)
            else:
                return visitor.visitChildren(self)

    def orderClause(self):
        localctx = DaxParser.OrderClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_orderClause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(DaxParser.ORDER)
            self.state = 52
            self.match(DaxParser.BY)
            self.state = 53
            self.orderExpression()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 33:
                self.state = 54
                self.match(DaxParser.COMMA)
                self.state = 55
                self.orderExpression()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrderExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(DaxParser.ExpressionContext, 0)

        def ASC(self):
            return self.getToken(DaxParser.ASC, 0)

        def DESC(self):
            return self.getToken(DaxParser.DESC, 0)

        def getRuleIndex(self):
            return DaxParser.RULE_orderExpression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOrderExpression"):
                listener.enterOrderExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOrderExpression"):
                listener.exitOrderExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrderExpression"):
                return visitor.visitOrderExpression(self)
            else:
                return visitor.visitChildren(self)

    def orderExpression(self):
        localctx = DaxParser.OrderExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_orderExpression)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.expression()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 4 or _la == 5:
                self.state = 62
                _la = self._input.LA(1)
                if not (_la == 4 or _la == 5):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varExpression(self):
            return self.getTypedRuleContext(DaxParser.VarExpressionContext, 0)

        def logicalOr(self):
            return self.getTypedRuleContext(DaxParser.LogicalOrContext, 0)

        def getRuleIndex(self):
            return DaxParser.RULE_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)

    def expression(self):
        localctx = DaxParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expression)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.varExpression()
                pass
            elif token in [4, 5, 6, 7, 8, 11, 12, 13, 16, 24, 25, 29, 31, 34, 35, 36, 37, 38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.logicalOr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(DaxParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(DaxParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(DaxParser.EQ, 0)

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DaxParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(DaxParser.ExpressionContext, i)

        def varExpression(self):
            return self.getTypedRuleContext(DaxParser.VarExpressionContext, 0)

        def RETURN(self):
            return self.getToken(DaxParser.RETURN, 0)

        def getRuleIndex(self):
            return DaxParser.RULE_varExpression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVarExpression"):
                listener.enterVarExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVarExpression"):
                listener.exitVarExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVarExpression"):
                return visitor.visitVarExpression(self)
            else:
                return visitor.visitChildren(self)

    def varExpression(self):
        localctx = DaxParser.VarExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(DaxParser.VAR)
            self.state = 70
            self.match(DaxParser.IDENTIFIER)
            self.state = 71
            self.match(DaxParser.EQ)
            self.state = 72
            self.expression()
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.state = 73
                self.varExpression()
                pass
            elif token in [10]:
                self.state = 74
                self.match(DaxParser.RETURN)
                self.state = 75
                self.expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicalOrContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAnd(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DaxParser.LogicalAndContext)
            else:
                return self.getTypedRuleContext(DaxParser.LogicalAndContext, i)

        def OR_OP(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.OR_OP)
            else:
                return self.getToken(DaxParser.OR_OP, i)

        def getRuleIndex(self):
            return DaxParser.RULE_logicalOr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLogicalOr"):
                listener.enterLogicalOr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLogicalOr"):
                listener.exitLogicalOr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLogicalOr"):
                return visitor.visitLogicalOr(self)
            else:
                return visitor.visitChildren(self)

    def logicalOr(self):
        localctx = DaxParser.LogicalOrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_logicalOr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.logicalAnd()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 15:
                self.state = 79
                self.match(DaxParser.OR_OP)
                self.state = 80
                self.logicalAnd()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicalAndContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equality(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DaxParser.EqualityContext)
            else:
                return self.getTypedRuleContext(DaxParser.EqualityContext, i)

        def AND_OP(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.AND_OP)
            else:
                return self.getToken(DaxParser.AND_OP, i)

        def getRuleIndex(self):
            return DaxParser.RULE_logicalAnd

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLogicalAnd"):
                listener.enterLogicalAnd(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLogicalAnd"):
                listener.exitLogicalAnd(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLogicalAnd"):
                return visitor.visitLogicalAnd(self)
            else:
                return visitor.visitChildren(self)

    def logicalAnd(self):
        localctx = DaxParser.LogicalAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_logicalAnd)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.equality()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 14:
                self.state = 87
                self.match(DaxParser.AND_OP)
                self.state = 88
                self.equality()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EqualityContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relational(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DaxParser.RelationalContext)
            else:
                return self.getTypedRuleContext(DaxParser.RelationalContext, i)

        def EQ(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.EQ)
            else:
                return self.getToken(DaxParser.EQ, i)

        def NEQ(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.NEQ)
            else:
                return self.getToken(DaxParser.NEQ, i)

        def getRuleIndex(self):
            return DaxParser.RULE_equality

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEquality"):
                listener.enterEquality(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEquality"):
                listener.exitEquality(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEquality"):
                return visitor.visitEquality(self)
            else:
                return visitor.visitChildren(self)

    def equality(self):
        localctx = DaxParser.EqualityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_equality)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.relational()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 17 or _la == 18:
                self.state = 95
                _la = self._input.LA(1)
                if not (_la == 17 or _la == 18):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 96
                self.relational()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RelationalContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additive(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DaxParser.AdditiveContext)
            else:
                return self.getTypedRuleContext(DaxParser.AdditiveContext, i)

        def LT(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.LT)
            else:
                return self.getToken(DaxParser.LT, i)

        def LTE(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.LTE)
            else:
                return self.getToken(DaxParser.LTE, i)

        def GT(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.GT)
            else:
                return self.getToken(DaxParser.GT, i)

        def GTE(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.GTE)
            else:
                return self.getToken(DaxParser.GTE, i)

        def IN(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.IN)
            else:
                return self.getToken(DaxParser.IN, i)

        def getRuleIndex(self):
            return DaxParser.RULE_relational

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRelational"):
                listener.enterRelational(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRelational"):
                listener.exitRelational(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRelational"):
                return visitor.visitRelational(self)
            else:
                return visitor.visitChildren(self)

    def relational(self):
        localctx = DaxParser.RelationalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_relational)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.additive()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 16252928) != 0:
                self.state = 103
                _la = self._input.LA(1)
                if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 16252928) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 104
                self.additive()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AdditiveContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicative(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DaxParser.MultiplicativeContext)
            else:
                return self.getTypedRuleContext(DaxParser.MultiplicativeContext, i)

        def PLUS(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.PLUS)
            else:
                return self.getToken(DaxParser.PLUS, i)

        def MINUS(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.MINUS)
            else:
                return self.getToken(DaxParser.MINUS, i)

        def AMPERSAND(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.AMPERSAND)
            else:
                return self.getToken(DaxParser.AMPERSAND, i)

        def getRuleIndex(self):
            return DaxParser.RULE_additive

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAdditive"):
                listener.enterAdditive(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAdditive"):
                listener.exitAdditive(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAdditive"):
                return visitor.visitAdditive(self)
            else:
                return visitor.visitChildren(self)

    def additive(self):
        localctx = DaxParser.AdditiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_additive)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.multiplicative()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 318767104) != 0:
                self.state = 111
                _la = self._input.LA(1)
                if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 318767104) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 112
                self.multiplicative()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MultiplicativeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(DaxParser.UnaryContext)
            else:
                return self.getTypedRuleContext(DaxParser.UnaryContext, i)

        def ASTERISK(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.ASTERISK)
            else:
                return self.getToken(DaxParser.ASTERISK, i)

        def SLASH(self, i: int = None):
            if i is None:
                return self.getTokens(DaxParser.SLASH)
            else:
                return self.getToken(DaxParser.SLASH, i)

        def getRuleIndex(self):
            return DaxParser.RULE_multiplicative

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMultiplicative"):
                listener.enterMultiplicative(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMultiplicative"):
                listener.exitMultiplicative(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMultiplicative"):
                return visitor.visitMultiplicative(self)
            else:
                return visitor.visitChildren(self)

    def multiplicative(self):
        localctx = DaxParser.MultiplicativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_multiplicative)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.unary()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 26 or _la == 27:
                self.state = 119
                _la = self._input.LA(1)
                if not (_la == 26 or _la == 27):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 120
                self.unary()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnaryContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary(self):
            return self.getTypedRuleContext(DaxParser.UnaryContext, 0)

        def PLUS(self):
            return self.getToken(DaxParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(DaxParser.MINUS, 0)

        def NOT_OP(self):
            return self.getToken(DaxParser.NOT_OP, 0)

        def primaryExpression(self):
            return self.getTypedRuleContext(DaxParser.PrimaryExpressionContext, 0)

        def getRuleIndex(self):
            return DaxParser.RULE_unary

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterUnary"):
                listener.enterUnary(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitUnary"):
                listener.exitUnary(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitUnary"):
                return visitor.visitUnary(self)
            else:
                return visitor.visitChildren(self)

    def unary(self):
        localctx = DaxParser.UnaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_unary)
        self._la = 0  # Token type
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 24, 25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                _la = self._input.LA(1)
                if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 50397184) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 127
                self.unary()
                pass
            elif token in [4, 5, 6, 7, 8, 11, 12, 13, 29, 31, 34, 35, 36, 37, 38]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.primaryExpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(DaxParser.LiteralContext, 0)

        def columnReference(self):
            return self.getTypedRuleContext(DaxParser.ColumnReferenceContext, 0)

        def tableReference(self):
            return self.getTypedRuleContext(DaxParser.TableReferenceContext, 0)
